Add dedicated ci for Instrumentation.Wcf project.

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -50,3 +50,8 @@ flags:
     paths:
       - src/OpenTelemetry.Instrumentation.Process
 
+  unittests-Instrumentation.Wcf:
+    carryforward: true
+    paths:
+      - src/OpenTelemetry.Instrumentation.Wcf
+
