Add dedicated ci for Instrumentation.Owin project.

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -45,6 +45,11 @@ flags:
     paths:
       - src/OpenTelemetry.Exporter.OneCollector
 
+  unittests-Instrumentation.Owin:
+    carryforward: true
+    paths:
+      - src/OpenTelemetry.Instrumentation.Owin
+
   unittests-Instrumentation.Process:
     carryforward: true
     paths:
