--- a/.github/workflows/ci-Instrumentation.Owin.yml
+++ b/.github/workflows/ci-Instrumentation.Owin.yml
@@ -14,4 +14,6 @@ jobs:
     with:
       project-name: OpenTelemetry.Instrumentation.Owin
       code-cov-name: Instrumentation.Owin
+      os-list: '[ "windows-latest" ]'
+      tfm-list: '[ "net462" ]'
 
