--- a/.github/workflows/ci-Exporter.Geneva.yml
+++ b/.github/workflows/ci-Exporter.Geneva.yml
@@ -5,6 +5,7 @@ on:
     branches: [ 'main*', 'exporter*' ]
     paths:
     - '*/OpenTelemetry.Exporter.Geneva*/**'
+    - 'src/Shared/**'
     - 'build/**'
     - '!**.md'
 
