--- a/.github/workflows/ci-Exporter.OneCollector.yml
+++ b/.github/workflows/ci-Exporter.OneCollector.yml
@@ -5,6 +5,7 @@ on:
     branches: [ 'main*', 'exporter*' ]
     paths:
     - '*/OpenTelemetry.Exporter.OneCollector*/**'
+    - 'src/Shared/**'
     - 'build/**'
     - '!**.md'
 
