--- a/.github/workflows/ci-Instrumentation.Wcf.yml
+++ b/.github/workflows/ci-Instrumentation.Wcf.yml
@@ -5,6 +5,7 @@ on:
     branches: [ 'main*', 'instrumentation*' ]
     paths:
     - '*/OpenTelemetry.Instrumentation.Wcf*/**'
+    - 'src/Shared/**'
     - 'build/**'
     - '!**.md'
 
