Add support for IRequestSessionChannel and IDuplexChannel

--- a/test/OpenTelemetry.Instrumentation.Wcf.Tests/OpenTelemetry.Instrumentation.Wcf.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.Wcf.Tests/OpenTelemetry.Instrumentation.Wcf.Tests.csproj
@@ -7,12 +7,17 @@
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net462</TargetFrameworks>
     <Nullable>disable</Nullable>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="certificate.pfx" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Moq" Version="$(MoqPkgVer)" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
     <PackageReference Include="System.Reflection.DispatchProxy" Version="4.7.1" />
