--- a/.github/workflows/ci-Instrumentation.Wcf.yml
+++ b/.github/workflows/ci-Instrumentation.Wcf.yml
@@ -5,6 +5,7 @@ on:
     branches: [ 'main*', 'instrumentation*' ]
     paths:
     - '*/OpenTelemetry.Instrumentation.Wcf*/**'
+    - 'examples/wcf/**'
     - 'src/Shared/**'
     - 'build/**'
     - '!**.md'
@@ -16,3 +17,26 @@ jobs:
       project-name: OpenTelemetry.Instrumentation.Wcf
       code-cov-name: Instrumentation.Wcf
 
+  push-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Push check"
+        uses: actions/github-script@v6
+        env:
+          parameter_url: '${{ github.event.workflow_run.html_url }}'
+        with:
+          script: |
+            await github.rest.checks.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              head_sha: context.sha,
+              name: "testing-check-push",
+              status: "completed",
+              conclusion: "${{ github.event.workflow_run.conclusion }}",
+              details_url: process.env.parameter_url,
+              output: {
+                title: "testing check push - title",
+                summary: "testing check push - summary",
+                text: "testing check push - text",
+              },
+            });
