--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,13 @@ jobs:
       code-cov-name: Instrumentation.Wcf
 
   build-test:
-    needs: [detect-changes, lint-md, build-test-solution, build-test-wcf]
+    needs: [
+      detect-changes,
+      lint-md,
+      build-test-solution,
+      build-test-wcf
+      ]
     if: always()
     runs-on: windows-latest
     steps:
-    - run: echo build complete ✓
+    - run: echo 'build complete ✓'
