--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
       build-test-solution,
       build-test-wcf
       ]
-    if: always()
+    if: always() && !cancelled() && !contains(needs.*.result, 'failure')
     runs-on: windows-latest
     steps:
     - run: echo 'build complete ✓'
