--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,10 +1,7 @@
-name: Integration Tests
+name: Integration Test - Redis
 
 on:
-  pull_request:
-    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
-    paths-ignore:
-    - '**.md'
+  workflow_call:
 
 jobs:
   redis-test:
